# anonfaces

./: .gitattributes  MANIFEST.in  README.md  add_remove_helper.py  anonfaces.spec  pyproject.toml  requirements.txt  setup.cfg  setup.py
anonfaces/: __init__.py  _version.py  anonfaces.py  centerface.py
