[build-system]
requires = ["setuptools>=67.6", "wheel", "setuptools-scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "anonfaces"
requires-python = ">=3.11"
description = "Video anonymization by face detection"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dynamic = ["version"]

dependencies = [
    "imageio>=2.25",
    "imageio-ffmpeg>=0.4.6",
    "numpy",
    "tqdm",
    "scikit-image",
    "opencv-python",
    "moviepy>=1.0.3",
    "pedalboard>=0.8.2",
    "onnxruntime",
    "onnx",
]

[project.optional-dependencies]
cuda = ["onnx", "onnxruntime-cuda"]
directml = ["onnx", "onnxruntime-directml"]
openvino = ["onnx", "onnxruntime-openvino"]

[project.scripts]
anonfaces = "anonfaces.anonfaces:main"

[tool.setuptools]
packages = ["anonfaces"]

[tool.setuptools.package-data]
anonfaces = ["centerface.onnx"]

[tool.setuptools_scm]
write_to = "anonfaces/_version.py"

[tool.ruff]
line-length = 120

[project.urls]
repository = "https://github.com/StealUrKill/anonfaces"
