[build-system]
requires = ["setuptools>=67.6", "wheel", "setuptools-scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "anonfaces"
version = "1.0.5"
requires-python = "==3.11.*"
description = "Video anonymization by face detection"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "imageio>=2.25",
    "imageio-ffmpeg>=0.4.6",
    "ffmpeg-python==0.2.0",
    "numpy==1.26.4",
    "tqdm",
    "scikit-image",
    "opencv-python",
    "moviepy>=1.0.3",
    "pedalboard>=0.8.2",
    "onnx==1.16.2",
]

[project.optional-dependencies]
standard = ["onnxruntime==1.19.0"]
cuda = ["onnxruntime-gpu==1.18.1"]
directml = ["onnxruntime-directml==1.19.0"]
openvino = ["onnxruntime-openvino==1.18.0", "openvino==2024.1.0"]

[project.scripts]
anonfaces = "anonfaces.anonfaces:main"

[tool.setuptools]
packages = ["anonfaces"]

[tool.setuptools.package-data]
anonfaces = ["centerface.onnx"]

[tool.setuptools_scm]
write_to = "anonfaces/_version.py"

[tool.ruff]
line-length = 120

[project.urls]
repository = "https://github.com/StealUrKill/anonfaces/tree/stable1.0.5"
